--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,58 @@
-fastapi
-uvicorn[standard]
-requests
-beautifulsoup4
+annotated-types==0.7.0
+anyio==4.7.0
+appdirs==1.4.4
+attrs==24.2.0
+beautifulsoup4==4.12.3
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+dnspython==2.7.0
+email_validator==2.2.0
+fastapi==0.115.6
+fastapi-cli==0.0.6
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.0
+idna==3.10
+importlib_metadata==8.5.0
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+numpy==2.1.3
+outcome==1.3.0.post0
+pandas==2.2.3
+pydantic==2.10.3
+pydantic_core==2.27.1
+pyee==11.1.1
+Pygments==2.18.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.19
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+rich==13.9.4
+rich-toolkit==0.12.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+starlette==0.41.3
+tqdm==4.67.1
+trio==0.27.0
+trio-websocket==0.11.1
+typer==0.15.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==1.26.20
+uvicorn==0.32.1
+uvloop==0.21.0
+watchfiles==1.0.0
+websocket-client==1.8.0
+websockets==10.4
+wsproto==1.2.0
+zipp==3.21.0
