--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-beautifulsoup4==4.12.3
-fastapi==0.115.6
-requests==2.32.3
-uvicorn==0.32.1
+requests
+pydantic
+fastapi
+beautifulsoup4
+python-dotenv
+google-generativeai
